integrated fixes, and extended link descriptions

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -74,13 +74,13 @@ block contact
   p I'm in love with technopolitics, I believe in 2016 the goal of a cypherpunk is no longer "encrypt evertything". The power dynamics online have changed since the early '00. Now transnational corporation use 
     a(href='https://medium.com/@_vecna/whatsapp-security-santa-or-cryptography-as-cost-reduction-40a201b46708') crypto as cost reduction
     |, the challenges nowadays are others.
-  p Challenging the network monopolies, challenging massive profiling, and the business dynamics supporting this, is my primary concern now. Telco, Big Data industries, and nations are in a fight against themselves. This offers a new opening for users, in this malebolge(what is this word?), we have to at least guarantee the preservation of human rights on the Internet and challenge abuses when they arise.
-  p It is clear that the speed of institution is <<- this sentence I do not understand, is it finished?) The tools are a mix of technology, political activism, and network sense (what does noetwork sense mean?).
+  p Challenging the network monopolies, challenging massive profiling, and the business dynamics supporting this, is my primary concern now. Telco, Big Data industries, and nations are in a fight against themselves. This offers a new opening for users, in this chaos, we have to at least guarantee the preservation of human rights on the Internet and challenge abuses when they arise.
+  p It is clear that institutions are not fast enough to catch up with corporate activities in the ditigal age. This action is composed by a mix of technology, political activism and psycology of the networks. Is completelty transnational, because a SocialNetwork monopolist is a global problem.
 
   h4.harsh The harsh truth ;)
   p I do not have the capacity to look for funding. I'm (mostly) a technician, and writing funding requests is not exactly my best way to invest time. If you believe in this project, consider tipping here (TODO donation page), or do some kind of fundraising.
 
-block moar (moar?)
+block moar
 
   p The Filter Bubble is more of a social issue than a personal issue: You can spend effort to escape it, and actively keep in mind that it exists, but this is a minority questioning what they are perceiveing (what does the last sentence mean or relate to?). 
   P Society is undefended against an entity that can influence our learning process, so
@@ -91,28 +91,37 @@ block moar (moar?)
     .smaller (6 minutes reading) by 
       a(href="https://twitter.com/zeynep") Zeynep Tufekci
     |It is good that a person like the author poses herself the question: But what about all the things you are not an expert in? Or you are not actively looking into knowing more? All those times, you will simply not notice how the Filter Bubble manipulates you.
+
   .link.left 
-    a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/") SOME
+    a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/") Facebook outreach tool ignores black live matter
+    |A product intended to satisfy the users is discover to generate impartial results, if this behavior is human driven or algorithm driven is unclear.
+
   .link.right 
-    a(href="https://www.theguardian.com/technology/2016/jun/07/its-your-duty-to-complain-thats-how-companies-improve") SOME
+    a(href="https://www.theguardian.com/technology/2016/jun/07/its-your-duty-to-complain-thats-how-companies-improve") With big tech business making regular political and ethical blunders, it is our responsibility to complain – and let them know they must do better
+
   .link.left 
-    a(href="https://hbr.org/2015/05/customer-data-designing-for-transparency-and-trust") This article is on customers data 
-    |I share some points of this vision, I want to see a business model accessible to everyone on data analysis, and an OpenData regulation making clear which data are collected, how many, and which algorithms run over the data.
+    a(href="https://hbr.org/2015/05/customer-data-designing-for-transparency-and-trust") Designing for Transparency and Trust
+    .smaller I share some points of this vision. I want to see Cloud provider do open data, weekly updates, about which kind of meta-data they have. Doing full algorithm transparency about how the data in their hands are used and analyzed. Not the algorithm itself, but which are the variables kept in account.
 
   .link.right 
     a(href="http://arxiv.org/abs/1606.08813") EU regulations on algorithmic decision-making and a right to explanation
+
   .link.left 
     a(href="http://www.recode.net/2016/6/14/11923286/facebook-emotional-contagion-controversy-data-research-review-policy-ethics") How Facebook's emotional contagion controversy led to the company's new research review policy
+
   .link.right 
-    a(href="https://auditingalgorithms.wordpress.com/background-readings/") Auding Algorithm, I've still to read them
+    a(href="https://auditingalgorithms.wordpress.com/background-readings/") Long bibliography on Auding Algorithm
+
   .link.left 
     a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/") Facebook rules on experimenting on you, or at least what they decided they can tell you
+
   .link.right 
     a(href="http://www.hackerfactor.com/blog/index.php?/archives/726-Facebook-Tracking.html") Technical analysis of Facebook tracking
-  .link.left 
-    a(href="https://digitalmarketplace.blog.gov.uk/2016/06/16/an-open-standard-for-public-procurement-and-contracting-data/") Vaguely related
-  .link.right 
+
+  .link.left
     a(href="http://mobile.reuters.com/article/idUSKCN0ZB00M") Google, Facebook quietly move toward automatic blocking of extremist videos
-  .link.left 
+    .smaller but blocking is still a binary behavior, can be detected. This prject is more worried on heavy penalisation of content, causing that who looks actively for the content found it, who don't, just will never see it
+
+  .link.right
     a(href="http://www.bloomberg.com/view/articles/2016-07-05/facebook-is-bad-for-democracy") Facebook is bad for Democracy 
 
