updated tech and logic, new ideas, unwise direction

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -1,9 +1,5 @@
 extend skeleton
 
-block current
-
-  h3.note Note: This is an as yet unreleased project that is still in development. If you have received this link it is because I know you personally. Please don't share the link yet because the current website is still incomplete. I'm looking forward to hear your feedback and suggestions. I'm sure that if you have this link it is because you can provide valuable insight on this issue. ;) Thanks
-
 block what
 
   p The filter bubble is a social problem, not a personal one. The effect is the misinformation of the masses. Only through a collective effort we can measure the problem, understand it, and resist it.
@@ -14,8 +10,8 @@ block what
     b It is the perfect technocratic scapegoat.
     | In such a case nobody is guilty. This project's aim is to act as a third party that is able to see how much and which content gets rarely seen by users.
 
-  p By joining facebook.tracking.exposed, you can extract the meta-data that Facebook is giving you, and thus an open community of researchers can
-    b  analyze algorithm outcomes and keep Facebook accountable.
+  p By joining facebook.tracking.exposed, you can extract the meta-data of your Facebook timeline, and see in your personal private page how this is influenced. A open community of researchers can
+    b analyze algorithm outcomes and keep Facebook accountable.
   | It will be hard, but it is only the beginning.
     
 block how
