--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700')
 
 *
   margin 0
@@ -10,6 +9,13 @@ body
 
 .header-fb-color
   background-color #3b5999
+
+.suggest-label
+  color rgba(255, 125, 0, 1)
+  text-decoration underline
+
+.suggest-label:hover
+  font-style bold
 
 .head-text
   font-weight 800
