work in progress for UserTimeLine

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -121,3 +121,5 @@ block moar
   .link.right
     a(href="http://www.bloomberg.com/view/articles/2016-07-05/facebook-is-bad-for-democracy") Facebook is bad for Democracy 
 
+  .link.left
+    a(href="http://commondreams.org/views/2016/07/14/whats-good-facebook-not-so-good-democracy") What's good for facebook is not so good for Democracy
