--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='../dist/css/index.css')
+    link(rel='stylesheet', href='/css/index.css')
     title facebook.tracking.exposed
   body
   
