--- a/styles/index.styl
+++ b/styles/index.styl
@@ -7,23 +7,32 @@
 body
   font-family 'Source Code Pro', monospace
 
+p
+  font-size 1.3em
+
 .header-fb-color
   background-color #3b5999
 
-.suggest-label
-  color rgba(255, 125, 0, 1)
-  text-decoration underline
+.center
+  text-align center
 
-.suggest-label:hover
-  font-style bold
+/* not working ... bootstrap defaults are winning */
+a.suggest-label
+  color rgba(255, 125, 0, 1)
+  text-decoration none
+  &:hover
+    font-style bold
+/* end of: not working: bootstrap defaults are winning */
 
 .head-text
   font-weight 800
   font-size 50px
-  text-align center
-  padding 40px
+  padding 4%
   text-transform uppercase
   color #fff
+
+.green
+  color palegreen
 
 .propaganda
   padding-right 10% 
@@ -41,11 +50,14 @@ body
   font-size 0.75em
   color darkgrey
 
+.quote
+  padding-left 20%
+  color darkgrey
+
 .smile
-  text-align center
   color #fff
   font-family Arial
-  font-size 0.6em
+  font-size 0.8em
 
 .harsh
   text-align right
@@ -53,7 +65,6 @@ body
 
 .line
   background #3b5999
-  text-align center
   color #334455
 
 .link
@@ -75,7 +86,6 @@ body
 
 .nav
   background #000
-  text-align center
 
   li
     display inline-block
