stabilized postFeed with refreshes, implemented version 0.9.4, bootstrap improvement

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -14,7 +14,7 @@ block what
     b analyze algorithm outcomes and keep Facebook accountable.
   | It will be hard, but it is only the beginning.
     
-block how
+block useit
 
   p 1. Install the 
     a(href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo") Tampermonkey 
@@ -54,7 +54,6 @@ block how
       a.sug(href="#" onclick="suggestion('groups');return false;") ઉ
     |.
   
-
 block vision
 
   p Researchers can use the API to do research on the Filter Bubble. 
@@ -65,7 +64,7 @@ block vision
 
   p No private content is collected. No harm can be done to your Facebook account by Facebook. 
     b You are not violating the Terms of Service
-    | , and this technology is not using the Facebook API. It is only extracting metadata (what|when|where|why) of what you see in your timeline. This way researches can then look for patterns and you will receive some stats (page still in TODO)
+    | , and this technology is not using the Facebook API. It is only extracting metadata (what|when|where|why) of what you see in your timeline. This way researches can then look for patterns and understand how the algorithm are tampering our reality perception.
 
   p New developers can contribute to extracting more meta-data from the Facebook page. Scraping can be more reliable, look at the: 
     a(href="https://github.com/vecna/ESCVI") code
@@ -78,33 +77,48 @@ block vision
     |.
   p Algorithms have to be explained and not treated as dark magic. Which are the variables considered? what weighs more in the final outcome? Algorithm discrimination will be a huge topic, and having ways to be understood by non-technical audiences is necessary considering the impact of algorithm on each one of us.
 
-block background
+block about
 
-  p My name is 
+  p My real name is 
     a(href="https://twitter.com/_vecna") Claudio Agosti
-    | you can reach me at claudio@tracking.exposed
-    |, I used to work on the anonymous whistleblowing framework 
+    |, I'm an European citizen grown up thanks to Internet bringing me outside of my small italian town. My life changed when in the 2007 I decided to see the 
+    a(href="https://en.wikipedia.org/wiki/Netwar") distributed network 
+    | as technical means to solve social problems, but this was leading me into technocracy, so I changed again in the 2011, and here we are.
+
+  p Don't email to me. Money? Interview? Blind date? The only way to get in touch with me is pressing the buttons like this: 
+    a.sug(href="#" onclick="suggestion('contact');return false;") ઉ
+    |, Every button in this page open a different questionaire, and contains the necessary information to communicate on a subject. If you can't fill up comletely the questionaire: I can't dedicate you the time you deserve.
+  
+  p The backstory you can find of me in linkedin is not serious, my background is the anonymous whistleblowing framework 
     a(href="https://en.wikipedia.org/wiki/GlobaLeaks") GlobaLeaks
-    |), and in the last two years I have spent most of my time at
-    a(href="https://tacticaltech.org") TacticalTech.
+    | and an happy intercourse with 
+    a(href="https://tacticaltech.org") TacticalTech
+    |. I'm driven by an utopistic vision in which citizens more informed would take better decisions in this collective, 2500 years old, experiment called society.
 
-  p.smaller Despite me sharing my Twitter handle above, I don't want to endorse centralized services, but in this phase of the project I see the compromise one has to take between a huge outreach and the practical tool that has become the de facto standard. Sooner or later there will be published a personal policy in identity compartimentalisation (what does this sentence mean).
+  h4 Personal rant
 
-  h4.harsh personal rant
   p I'm in love with technopolitics, I believe in 2016 the goal of a cypherpunk is no longer "encrypt everything". The power dynamics online have changed since the early '00. Now transnational corporation use 
     a(href='https://medium.com/@_vecna/whatsapp-security-santa-or-cryptography-as-cost-reduction-40a201b46708') crypto as cost reduction
     |, the challenges nowadays are others.
   p Challenging the network monopolies, challenging massive profiling, and the business dynamics supporting this, is my primary concern now. Telco, Big Data industries, and nations are in a fight against themselves. This offers a new opening for users, in this chaos, we (users) have to at least guarantee the preservation of human rights on the Internet and challenge abuses when they arise.
-  p It is clear that institutions are not fast enough to catch up with corporate activities in the ditigal age. This action is composed by a mix of technology, political activism and psycology of the networks. Is completelty transnational, and is open to any collaboration via the project-defined directions that you can see pressing over this
-    span .green ઉ
-    | recurring symbol.
+
+  h4 Philosophy 
+
+  p It is clear that institutions are not fast enough to catch up with corporate activities in the ditigal age, but somehow, someone, has to keep social values alive despite the technocracy arising. This project is completelty transnational, as the influence of facebook is, and is open to any collaboration pressing the many 
+    span.green ઉ 
+    |  buttons you find in this page. 
+  p The only way to challenge a secretive power is being collectively open. (if you believe that privacy is somehow imply: it is not that, it is complicated, I'll publish a blogpost about it in the future, at the moment just 
+    a(href='#moar') read the articles
+    |). 
+
+block funding
 
   h4.harsh Funding, €, $, £, ₹
   p Who deal with fundraising and see that this project can fit in a project, can submit with me. will receive as compensation the 30% of the funding received.
   h4.harsh Tax deducible donations
   p Thanks to the Center for Cultivation of Technology, this is one of the pilot project for OSS project in which you can donate 
 
-block moar
+block links
 
   p The Filter Bubble is more of a social issue than a personal issue: You can spend effort to escape it, and actively keep in mind that it exists, but this is a minority questioning what they are perceiveing (what does the last sentence mean or relate to?). 
   P Society is undefended against an entity that can influence our learning process, so
