--- a/styles/index.styl
+++ b/styles/index.styl
@@ -10,29 +10,21 @@ body
 p
   font-size 1.3em
 
-.header-fb-color
+.fb-color
   background-color #3b5999
 
 .center
   text-align center
 
-/* not working ... bootstrap defaults are winning */
-a.suggest-label
-  color rgba(255, 125, 0, 1)
-  text-decoration none
-  &:hover
-    font-style bold
-/* end of: not working: bootstrap defaults are winning */
-
 .head-text
-  font-weight 800
-  font-size 50px
-  padding 4%
   text-transform uppercase
   color #fff
 
 .green
   color palegreen
+
+.grey 
+  color #d3d3d3
 
 .propaganda
   padding-right 10% 
@@ -40,11 +32,6 @@ a.suggest-label
   padding-top 2%
   padding-bottom 2%
   border-bottom #3b5999 0.7em solid
-
-  p::first-letter 
-    font-weight bold
-    font-size 1.4em
-    color #3b5999
 
 .smaller
   font-size 0.75em
@@ -55,7 +42,6 @@ a.suggest-label
   color darkgrey
 
 .smile
-  color #fff
   font-family Arial
   font-size 0.8em
 
@@ -84,21 +70,8 @@ a.suggest-label
 .note
   font-style italic
 
-.nav
-  background #000
-
-  li
-    display inline-block
-
-  a
-    display inline-block
-    padding 20px
-    color #fff
-    text-decoration none
-
-    &:hover
-      background-color #3AB795
-      text-decoration underline
+.facebook
+  background #3b5999
 
 .main-content
   margin 50px auto
