--- a/styles/index.styl
+++ b/styles/index.styl
@@ -10,8 +10,6 @@ body
 p
   font-size 1.3em
 
-.fb-color
-  background-color #3b5999
 
 .center
   text-align center
@@ -20,18 +18,15 @@ p
   text-transform uppercase
   color #fff
 
-.green
-  color palegreen
-
-.grey 
-  color #d3d3d3
-
 .propaganda
   padding-right 10% 
   padding-left 10%
-  padding-top 2%
   padding-bottom 2%
   border-bottom #3b5999 0.7em solid
+
+  h2
+    border-left: #3b5999 0.01em solid
+    padding-left: 0.1em
 
 .smaller
   font-size 0.75em
@@ -67,9 +62,6 @@ p
   border-left 8%
   background #DCEFE8
 
-.note
-  font-style italic
-
 .facebook
   background #3b5999
 
@@ -94,3 +86,21 @@ p
 .fontana
   font-family: museo-slab,Georgia,"Times New Roman",Times,serif  
 
+
+.fb-color
+  background-color #3b5999
+
+.white
+  color white
+
+.green
+  color green 
+
+.grey 
+  color #d3d3d3
+
+.red
+  color red
+
+.yellow
+  color darkyellow
